# goji-repl

./: .gitignore  README.md  TODO.md  atom.py  env.py  eval.py  flake.nix  intrinsics.py  logging.py  node.py  old_env.py  old_eval.py  old_parser.py  old_program.py  options.py  parser.py  program.py  pyproject.toml  repl.py  shell.nix  syntax.md  test_env.py  test_tokenizer.py  tokenizer.py  tokenizer_tools.py
ast/: expressions.py  interfaces.py  statements.py
aug2024/: old_atom.py  old_env.py  old_eval.py  old_intrinsics.py  old_node.py  old_parser.py  old_program.py  test_env.py
gojiast/: expressions.py
gojiparse/: driver.py  parser.py  rules.py  symbols.py
parser/: driver.py  expressions.py  parser.py  rules.py  statement.py  statements.py  symbols.py
runtime/: env.py  eval.py
src/: repl.py
src/gojiast/: statements.py
src/gojiparse/: expressions.py  statements.py
src/runtime/: eval.py
src/testdata/: prog.ph  simple.ph  simple2.goji
testdata/: fun.goji  prog.ph  simple.ph  simple2.goji
tokenizer/: test_tokens.py  tokens.py  tools.py
