[project]
name = "goji-repl-sdk"
version = "0.1.0"
description = "REPL for Goji"
dependencies = [
    # "whatever",
]

[tool.black]
verbose = true

[tool.mypy]
files = "src/**/*.py"

[tool.pylint.messages_control]
disable = "C0114,C0115,C0116,C0209"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

# [tool.setuptools]
# py-modules = ["repl"]
# [tool.setuptools.packages.find]
# where = ["."]  # list of folders that contain the packages (["."] by default)
#include = ["<package name>"]  # package names should match these glob patterns (["*"] by default)
# exclude = []  # exclude packages matching these glob patterns (empty by default)
# namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.scripts]
# always "message text" t t f t f 
# always = "assertions:cmd_always"

# sometimes "message text" t t f t f 
# sometimes = "assertions:cmd_sometimes"

# addx 10 17
addx = "repl:add"

# subx 100 31
# subx = "assertions:sub"

# [tool.pydeploy]
# exclude_libs = []

